# openni2socket

./: CMakeLists.txt
src/: frame.h  openni2socket.cpp  openni2socket.h
